--- a/vue_blog/package.json
+++ b/vue_blog/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.9",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
